# warg

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  WargPackage.py  environment.yaml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_docs.txt  requirements_tests.txt  setup.py  version.py
.github/: FUNDING.yml  dependabot.yml  publish-to-test-pypi.yml
.github/workflows/: on_push.yml  (+3 more)
benchmarks/: benchmark_func.py  pqp_benchmark.py  returns_benchmark.py
docs/: Makefile  clean.sh  make.bat  make.sh
requirements/: requirements_dev.txt  requirements_docs.txt  requirements_tests.txt
samples/: parallel_env_sampling.py
scripts/: bump_version.sh
tests/: req_unit_test.py  test_app_path.py  test_arguments.py  test_ast_ops.py  test_auto_dict.py  test_collective.py  test_functions.py  test_gdkc.py  test_imports.py  test_kw_passing.py  test_nod.py  test_post_init.py  test_pqp.py  test_sanity.py  test_singleton.py  test_toaster.py
warg/: README.md  __init__.py  app_path.py  app_path_utilities.py  arguments.py  auto_dict.py  auto_nod_return.py  boolean_tests.py  business.py  config_shell.py  context_wrapper.py  contexts.py  datetimes.py  debug.py  decorators.py  exceptions.py  functions.py  gdkc.py  hashing.py  importing.py  imports.py  iteration.py  kw_passing.py  manipulation.py  map_itertools.py  mixins.py  named_ordered_dict.py  named_ordered_dictionary.py  ode.py  ordinals.py  os_platform.py  packages.py  platform.py  plugin.py  pooled_queue_processor.py  post_init.py  replication.py  sequences.py  singleton.py  strings.py  (+6 more)
(+152 files in other folders)
